enterprise/operator/pkg/lb/testdata/lbservice_translation/11-healthcheck-tcp/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-1
spec:
  backendType: IP
  backends:
    - ip: 172.18.0.5
      port: 8080
    - ip: 172.18.0.6
      port: 8080
  healthCheck:
    intervalSeconds: 15
    timeoutSeconds: 2
    healthyThreshold: 2
    unhealthyThreshold: 2
    tcp:
      send:
        text: 7b22666f6f223a2022626172227d
      receive:
        - text: 7b22737461747573223a20224845414c544859227d
